# Add PCL Lib		
FIND_PACKAGE( PCL REQUIRED COMPONENTS common io visualization filters)
# list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4") # use this for ubuntu 16.04

# Add OpenCV
FIND_PACKAGE( OpenCV REQUIRED )

# Add heads and libs
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )

# CSparse
FIND_PACKAGE( CSparse REQUIRED )
INCLUDE_DIRECTORIES( ${G2O_INCLUDE_DIR} ${CSPARSE_INCLUDE_DIR} )

# Caffe
FIND_PACKAGE(Caffe REQUIRED)
INCLUDE_DIRECTORIES(${Caffe_INCLUDE_DIRS})
ADD_DEFINITIONS(${Caffe_DEFINITIONS})

# Ceres
SET( Ceres_ROOT /usr/local/include/ceres )
FIND_PACKAGE(Ceres REQUIRED)

ADD_LIBRARY( slambase slamBase.cpp )
TARGET_LINK_LIBRARIES( slambase
    ${OpenCV_LIBS} 
    ${PCL_LIBRARIES} )



ADD_EXECUTABLE(slam slam.cpp )
TARGET_LINK_LIBRARIES( slam ceres 
    ${OpenCV_LIBS}  slambase ${CSPARSE_LIBRARY} ${Ceres_LIBRARIES})

ADD_EXECUTABLE(slamDP slamDP.cpp )
TARGET_LINK_LIBRARIES( slamDP ceres 
    ${OpenCV_LIBS}  slambase ${CSPARSE_LIBRARY} ${Ceres_LIBRARIES}  ${Caffe_LIBRARIES} )
 



